@@ -1,8 +1,10 @@
 package com.md9.controller;
+
 import com.md9.model.Admin;
-import com.md9.service.AdminUserDetailsService;
-import com.md9.service.AuthService;
+import com.md9.repository.AdminRepository;
 import com.md9.service.JwtUtil;
+
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -10,21 +12,21 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
 
     private final AuthenticationManager authenticationManager;
-    private final AdminUserDetailsService adminUserDetailsService;
     private final JwtUtil jwtUtil;
+    private final AdminRepository adminRepository;
 
-    public AuthController(AuthenticationManager authenticationManager, AdminUserDetailsService adminUserDetailsService, JwtUtil jwtUtil) {
+    public AuthController(AuthenticationManager authenticationManager, JwtUtil jwtUtil, AdminRepository adminRepository) {
         this.authenticationManager = authenticationManager;
-        this.adminUserDetailsService = adminUserDetailsService;
         this.jwtUtil = jwtUtil;
+        this.adminRepository = adminRepository;
     }
 
     @PostMapping("/login")
@@ -32,13 +34,25 @@ public class AuthController {
         String username = credentials.get("username");
         String password = credentials.get("password");
 
-        Authentication authentication = authenticationManager.authenticate(
-            new UsernamePasswordAuthenticationToken(username, password)
-        );
+        Authentication authentication = authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(username, password));
+        UserDetails userDetails = (UserDetails) authentication.getPrincipal();
+        
+        // Fetch admin from DB
+        Optional<Admin> adminOptional = adminRepository.findByUsername(username);
+        if (adminOptional.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Invalid credentials");
+        }
+        Admin admin = adminOptional.get();
 
-        UserDetails userDetails = adminUserDetailsService.loadUserByUsername(username);
+        // Generate token
         String token = jwtUtil.generateToken(userDetails.getUsername());
 
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        // ✅ Return token and isSuperAdmin status
+        return ResponseEntity.ok(Map.of(
+            "token", token,
+            "isSuperAdmin", admin.isSuperAdmin(),
+            "admin", admin
+        ));
     }
+
 }
