@@ -1,10 +1,11 @@
 package com.md9.model;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class AdminUserDetails implements UserDetails {
 
@@ -16,7 +17,11 @@ public class AdminUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // No roles for now
+        if (this.admin.isSuperAdmin()) {
+            return List.of(new SimpleGrantedAuthority("ROLE_SUPER_ADMIN"));
+        } 
+
+        return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
     }
 
     @Override
